restruct statistics by projects